<resources>
    <string name="app_name">指纹阅读</string>
    <string name="action_settings">Settings</string>
    <string name="button_begin">开始</string>
    <string name="button_stop">停止</string>
    <string name="button_enroll">登记</string>
    <string name="button_identify">识别</string>

    <string name="button_login">登录</string>
    <string name="button_SearchReader">检索读者</string>
    <string name="button_loadingFinger">载入指纹</string>
</resources>
